<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu_category" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_order" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shipper"
            android:icon="@drawable/ic_local_shipping"
            android:title="@string/menu_shipper" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_sign_out" />
    </group>

</menu>